--- a/src/main/docker/db-test.yml
+++ b/src/main/docker/db-test.yml
@@ -3,10 +3,10 @@ services:
   rub-db:
     image: mysql:5.7.26
     volumes:
-        - ~/volumes/var/mysql/:/var/lib/mysql/
+        - /volumes/var/mysql/:/var/lib/mysql/
     environment:
       - MYSQL_ROOT_PASSWORD=Guru2020
       - MYSQL_DATABASE=products
     ports:
-      - 3306:3306
+      - 6030:3306
     command: mysqld --lower_case_table_names=1 --skip-ssl --character_set_server=utf8mb4 --explicit_defaults_for_timestamp
