--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,8 @@ logging.level.ROOT = WARN
 logging.level.com.guru.ruc.orchestrator = INFO
 
 spring.datasource.type = com.zaxxer.hikari.HikariDataSource
-spring.datasource.url = jdbc=mysql=//localhost:3306/${MYSQL_DATABASE}?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/${MYSQL_DATABASE}?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
 spring.datasource.password = ${MYSQL_ROOT_PASSWORD}
 spring.datasource.hikari.poolName = ruc-pool
@@ -13,11 +14,17 @@ spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit = 2048
 spring.datasource.hikari.data-source-properties.useServerPrepStmts = true
 
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto = update
 
-spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.database = MYSQL
 spring.jpa.show-sql = false
+
+#spring.jpa.properties.hibernate.id.new_generator_mappings: true
+#spring.jpa.properties.hibernate.connection.provider_disables_autocommit: true
+#spring.jpa.properties.hibernate.cache.use_second_level_cache: false
+#spring.jpa.properties.hibernate.cache.use_query_cache: false
+#spring.jpa.properties.hibernate.generate_statistics: false
 
 cloud.aws.credentials.accessKey = ${AWS_CREDENTIALS_ACCESSKEY}
 cloud.aws.credentials.secretKey = ${AWS_CREDENTIALS_SECRETKEY}
